# convolutional-neural-network

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ConfigTypes.h  Configs.h  ConvolutionalNetwork.h  ImageProcessor.h  Matrix.h  Matrix.hpp  Tensor.h  Tensor.hpp
include/ConvNetwork/: ConvolutionalNetwork.h  ForwardLayer.h  Kernel.h  Layer.h
src/: ConvolutionalNetwork.cpp  ImageProcessor.cpp  main.cpp
src/ConvNetwork/: ConvolutionalNetwork.cpp
tests/: main.cpp  matrix_tests.cpp  tensor_tests.cpp
